--- a/_posts/yan/2018-11-26-yanyan84.md
+++ b/_posts/yan/2018-11-26-yanyan84.md
@@ -12,9 +12,9 @@ video: true
 这段时间长沙天气不错，难得的暖冬，太阳照在身上很舒服。妈妈说妍妍的红帽子看上去很土气。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan2.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan3.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan4.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan2.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan3.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/hongmaoziyanyan4.jpg?imageMogr2/auto-orient" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/hongmaoziyanyan1.mp4" type='video/mp4'>
