--- a/_posts/yan/2019-03-14-yanyan107.md
+++ b/_posts/yan/2019-03-14-yanyan107.md
@@ -11,5 +11,5 @@ comments: true
 现在徐晓妍会把手插到口袋里装酷了😂
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/chakoudai.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/chakoudai.jpg?imageMogr2/auto-orient" />
 </figure>
