--- a/_posts/yan/2019-03-18-yanyan110.md
+++ b/_posts/yan/2019-03-18-yanyan110.md
@@ -11,15 +11,15 @@ comments: true
 妈妈给徐晓妍扎辫子了😊，我们家的妍妍是最可爱的。
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi1.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi2.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi3.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi4.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi5.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi6.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi7.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi8.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi9.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi10.jpg" />
-    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi11.jpg" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi1.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi2.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi3.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi4.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi5.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi6.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi7.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi8.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi9.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi10.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/zxbzi11.jpg?imageMogr2/auto-orient" />
 </figure>
