--- a/_posts/yan/2019-04-09-yanyan115.md
+++ b/_posts/yan/2019-04-09-yanyan115.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-妍妍是乖的乖乖妍
+徐晓妍是最乖的乖乖妍
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/hygyy.mp4" type='video/mp4'>
