--- a/_posts/yan/2019-04-25-yanyan119.md
+++ b/_posts/yan/2019-04-25-yanyan119.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-爷爷奶奶带徐晓妍到幼儿园里面玩，自己在那走迷宫，高兴坏了。
+爷爷奶奶带徐晓妍到幼儿园里面玩，自己在那走迷宫，自己高兴坏了。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/zoumigong.mp4" type='video/mp4'>
