--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -43,9 +43,11 @@ comments: false
 * 负责后端接口的维护（响应耗时，调用记录等）
 * 大数据表分表工作（简单哈希 + 虚拟节点）
 
-### 2017.08- ~ /微医集团
+### 2017.08- 2018.5 /微医集团
 * 负责分布式调用链路采集系统的开发
 * 负责自动化监控系统的开发
+
+### 2018.05- ~ /湖南亚信
 
 ## 项目
 
