--- a/_posts/yan/2019-06-10-yanyan128.md
+++ b/_posts/yan/2019-06-10-yanyan128.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-早上起来撒娇要抱，哭的不行，鼻涕眼泪都出来了
+早上起来撒娇要抱，哭的不行，鼻涕眼泪都出来了。上周妍妍晚上起来还坐在我头上，尿不湿在我脸上摩擦，嗯，看来一顿打又少不了了。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/yyk.mp4" type='video/mp4'>
