--- a/_posts/yan/2019-06-10-yanyan129.md
+++ b/_posts/yan/2019-06-10-yanyan129.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-端午节三天假，第一天我去医院拔了智齿，拔完感觉脸小了不少，第二天坐新开的四号线去了橘子洲，步行街，第三天开车上了黑糜峰。
+端午节三天假，第一天我去医院拔了智齿，拔完感觉脸都小了点，第二天坐新开的四号线去了橘子洲，步行街，第三天开车上了黑糜峰。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/duanwuyouwan1.jpg?imageMogr2/auto-orient" />
