--- a/_posts/post/2019-06-27-seata.md
+++ b/_posts/post/2019-06-27-seata.md
@@ -39,3 +39,39 @@ Seata的设计与典型的二阶段提交有所不同，在第一阶段，本地
 
 ## 对Seata认识
 
+### 有利的方面
+
+1. 对二阶段提交进行了优化，在一阶段就进行本地事务提交操作，减少了对资源的占用。
+2. 设计方案未以来数据库本身的支持，为更多的场景的接入提供可能性
+3. 全局事务锁的设计依赖主键，即行级锁，相比于mysql InnoDB的锁索引，锁的粒度更小
+```java
+    /**
+     * build lockKey
+     *
+     * @param rowsIncludingPK the records
+     * @return the string
+     */
+    protected String buildLockKey(TableRecords rowsIncludingPK) {
+        if (rowsIncludingPK.size() == 0) {
+            return null;
+        }
+        StringBuilder sb = new StringBuilder();
+        sb.append(rowsIncludingPK.getTableMeta().getTableName());
+        sb.append(":");
+        int filedSequence = 0;
+        for (Field field : rowsIncludingPK.pkRows()) {
+            sb.append(field.getValue());
+            filedSequence++;
+            if (filedSequence < rowsIncludingPK.pkRows().size()) {
+                sb.append(",");
+            }
+        }
+        return sb.toString();
+    }
+```
+
+### 一些限制
+
+1. 默认情况下的全局事务隔离级别，可能会导致业务上的脏数据的产生。
+2. TM严格依赖分支的失败异常通知，对于某些依赖错误码通知的场景不友好。
+3. 全局事务锁在某些场景下仍然会限制本地分支资源的释放，如：事务B完成一阶段的前提是获取全局事务锁, 如果事务A和事务B有相同的行操作并且事务A二阶段暂未完成，则全局事务锁不会被释放，事务B可能在一阶段被挂起或者获取不到全局事务锁而产生异常。
