--- a/_posts/post/2019-06-27-seata.md
+++ b/_posts/post/2019-06-27-seata.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Seata"
 date:   2019-06-27
-excerpt: "Seata：阿里开源的分布式事务服务"
+excerpt: "Seata，阿里开源的分布式事务服务"
 feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
 tag:
 - seata
