--- a/_posts/life/2019-06-29-bazichi.md
+++ b/_posts/life/2019-06-29-bazichi.md
@@ -2,13 +2,13 @@
 layout: post
 title: "拔智齿"
 date: 2019-06-29
-excerpt: "四颗智齿都拔掉了"
+excerpt: "四颗智齿都下岗了"
 tags: [智齿]
 feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
 life: true
 comments: true
 ---
-我的四颗智齿都光荣下岗了，脸肿的不行，也有点痛，还好不会再拔了。
+我的四颗智齿都被拔掉了，左边脸肿的不行，有点痛，还好不用再拔了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/bazhichi.jpg?imageMogr2/auto-orient" />
