--- a/_posts/life/2019-06-29-bazichi.md
+++ b/_posts/life/2019-06-29-bazichi.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
 life: true
 comments: true
 ---
-我的四颗智齿都被拔掉了，左边脸肿的不行，有点痛，还好不用再拔了。
+我的四颗智齿都拔掉了，左边脸肿的不行，有点痛，还好不用再拔了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/bazhichi.jpg?imageMogr2/auto-orient" />
