--- a/_posts/yan/2019-06-30-yanyan133.md
+++ b/_posts/yan/2019-06-30-yanyan133.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-周末全家去岳麓山玩，和孔雀合了个影。
+周末全家去岳麓山玩，在爱晚亭和孔雀合了个影。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/aiwanting.jpeg?imageMogr2/auto-orient" />
