--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -21,14 +21,14 @@ comments: false
 ## 自我评价
 * 肯花时间去琢磨一个未了解透彻的知识点。
 * 平常会看书并记录下思考结果。
-* 事业和家庭对我来说是平衡的，如果一定要说，家庭会多占一些。
+* 对于某些开源框架有比较深的理解，如dubbo，spring AOP， spring JPA，Mybatis，netty，tomcat，seata等，某些维护了部门内部私有分支。
+* 积极参与开源项目的贡献，比如Apache dubbo，alibaba seata（分布式事务服务）等。
 * 可以通过我的博客来了解我（[http://justice-love.com/](http://justice-love.com/)）。
 
 ## 工作经历
 
-### 2012.07-2014.11
+### 2011.09-2014.11 / 湖南步步高集团 开发工程师
 
-* 在这段时间比较躁动，在长沙换了两家公司，先后接触了互联网和大数据。
 * 在这段时间最大的成长是接触了业界比较常用的一些中间件产品，也出于兴趣，尝试着对Hbase Api进行了简单的封装并分享了出来。
     * 地址：[https://github.com/Justice-love/oceandata](https://github.com/Justice-love/oceandata)
 
@@ -48,29 +48,30 @@ comments: false
 * 负责自动化监控系统的开发
 
 ### 2018.05- ~ /湖南亚信
+* 负责物联网控制平台的多种通信协议的支持，如数据解析，身份认证等。
+    * 支持如Lwm2m，Coap协议等。
+    * 基于Apache AJP，实现自定义的TCP协议
 
 ## 项目
 
-### 2015.06-2015.07／hbase api封装-个人项目
-* __项目地址：[https://github.com/Justice-love/oceandata](https://github.com/Justice-love/oceandata)__
-    * 利用当时学习的mybatis源码和Hbase基础知识，使用动态代理的方式对Hbase的api进行封装.
-    * 简单利用java.util.LinkedHashMap removeEldestEntry实现了LRU缓存
+### 系统全链路数据采集串联
+* 记录一个完整的请求在经过多个系统间的链路调用情况
+    * 对于独立的一个请求，维护了traceId的生成和系统间传递逻辑
+    * 基于log4j Layout，实现自定义日志通配符并自动记录串联信息
+    * 基于logstash的日志采集和elasticsearch的日志存储
+    * 数据的模版化查询
 
-### 2017.01-2017.02／stockAnalysis-个人项目
-* __项目地址：[https://github.com/Justice-love/stockAnalysis](https://github.com/Justice-love/stockAnalysis)__
-    * 数据抓取-支持jsoup和httpClient两种抓取方式，抓取地址／转换逻辑等信息通过xml配置。
-    * 数据聚合-抓取数据入库，历史数据聚合。
-    * 分析过滤-可实时通过groovy增加分析算子；通过配置对分析算子串联成链式结构来对数据进行流式分析。
-    * 结果通知-目前仅支持邮件通知，后期准备接入smartQQ做IM通知。
-        * 现已基于钉钉自定义机器人实现IM推送。
+### 费用表分表操作
+* 原始费用数据已进行分表，但分表算法不利于数据节点的扩展
+    * 通过直接哈希 + 65536个虚拟节点，用以确定分表算法，虚拟节点可修改与实体表映射关系来维护数据节点的增删
+    * 数据迁移，增量数据通过触发器复制到新的散列表中，存量数据使用存储过程方式进行。
         
-### 2017.03.16 - 2017.06 /QiuQiu-个人项目
-* __项目地址：[https://github.com/justice-code/QiuQiu](https://github.com/justice-code/QiuQiu)__
-    * 一款基于Mybatis的数据库分库分表插件
-    * 支持自定义规则配置／自定义拦截配置
-    * 路由规则支持自定义groovy表达式
+### Lwm2m物联网协议服务端实现
+* Lwm2m是OMA（Open Mobile Alliance）指定的物联网规范，依据通用协议，实现相应的服务端程序
+    * 客户端的注册，信息更新，注销以及认证
+    * 客户端可操作传感器维护以及指令的发送
     
-### 2017.11.15 - 2017.12 / star-map - 个人项目
+### star-map - 个人项目
 * __项目地址：[https://github.com/justice-code/star-map](https://github.com/justice-code/star-map)__
     * 参考dubbo实现的分布式任务分发系统
     * 使用zookeeper作为注册中心
