--- a/_posts/life/2019-07-09-chaixian.md
+++ b/_posts/life/2019-07-09-chaixian.md
@@ -2,11 +2,11 @@
 layout: post
 title: "拆线"
 date: 2019-07-09
-excerpt: "上上周拔了智齿，缝了两针"
+excerpt: "上上周拔智齿，缝了两针"
 tags: [智齿]
 feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
 life: true
 comments: true
 ---
-上上周去拔智齿，缝了两针，上周末去拆线，应该是只给我拆了一根，今天早上发现还有一根线留着，最后老婆上阵，帮我拆了，瞬间感觉舒服了好多，肿也在慢慢消。
+上上周拔智齿，缝了两针，上周末去拆线，应该是只给我拆了一根，今天早上发现还有一根线留着，最后老婆上阵，帮我拆了，瞬间感觉舒服了好多，肿也在慢慢消了。
 {: .notice}
