--- a/_posts/yan/2019-07-19-yanyan135.md
+++ b/_posts/yan/2019-07-19-yanyan135.md
@@ -8,5 +8,5 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-昨天徐晓妍把自己反锁在了卧室里，爷爷奶奶吓坏了，在里面锁了好几分钟，爷爷奶奶说一打开门就看到徐晓妍一个人坐在卧室地上哭，要挨批了，晚上回去教育了妍妍一番。
+昨天徐晓妍把自己反锁在了卧室里七八分钟，爷爷奶奶吓坏了，说一打开门就看到徐晓妍一个人坐在卧室地上哭。要挨批了，晚上回去教育了妍妍一番。
 {: .notice}
