--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -14,6 +14,7 @@ comments: true
 2. 使用python搭建简单的http服务
 3. 调用脚本重新部署Jekyll博客
 4. 配置python服务开机启动
+5. 通过nginx转发，可以简单做到防刷
 
 * 配置webhook
     * 在github项目设置页面新增webhook
@@ -140,4 +141,4 @@ comments: true
     WantedBy=multi-user.target
     ```
     
-    或者：```nohup /usr/bin/python /opt/pages/www/script/server.py```
+    或者：```nohup /usr/bin/python /opt/pages/www/script/server.py &```
