--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -14,7 +14,7 @@ comments: true
 2. 使用python搭建简单的http服务
 3. 调用脚本重新部署Jekyll博客
 4. 配置python服务开机启动
-5. 通过nginx转发，可以简单做到防刷
+5. 通过nginx转发，限制域名访问，可以简单做到防刷
 
 * 配置webhook
     * 在github项目设置页面新增webhook
