--- a/_posts/yan/2019-08-05-yanyan137.md
+++ b/_posts/yan/2019-08-05-yanyan137.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-妍妍最近自我意识在慢慢萌发了，有时会一个人在那自言自语，说妍妍想干嘛，要去干嘛，也会学者我们的样子穿我们的拖鞋，还会表达不要了。
+妍妍最近自我意识在慢慢萌发了，有时会一个人在那自言自语，说妍妍想干嘛，要去干嘛，也会学着我们的样子穿我们的拖鞋，还会表达不要了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/ziwoyishi1.jpg?imageMogr2/auto-orient" />
