--- a/_posts/post/2019-08-02-transfer.md
+++ b/_posts/post/2019-08-02-transfer.md
@@ -15,10 +15,11 @@ comments: true
 
 1. Java提供InheritableThreadLocal用来传递父线程的上下文信息，但在线程池场景下，这种方式则会失效。
 2. 对于两种不同的线程启动方式（直接新建并启动和提交至线程池）场景，最好能够存在一致的线程上下文信息传递的方案。
+3. 最好能够自动传递，上下文信息的传递不是业务人员需要关心的问题。
 
 ## 解决方案
 
-* 不继续在线程方向上进行扩展，因为无论是直接新建还是使用线程池，线程都存在一定的复杂度，并且JDK已经提供，不利于扩展。
+* 不继续在线程方向上进行扩展，因为无论是直接新建还是使用线程池，线程都存在一定的复杂度，并且JDK已经提供完整的实现，通过继承的方式进行扩展，不利于自动传递。
 * 无论是新建线程还是使用线程是，一般都会传递Runnable的实现作为线程的执行逻辑
 
 解决：
