--- a/_posts/post/2019-08-02-transfer.md
+++ b/_posts/post/2019-08-02-transfer.md
@@ -23,7 +23,7 @@ comments: true
 * 无论是新建线程还是使用线程是，一般都会传递Runnable的实现作为线程的执行逻辑
 
 解决：
-* 能够扩展Runnable的字节码，在Runnable初始化时将线程上下文信息存储到Runnable的成员变量，run()方法添加before环绕，将成员变量的信息保存到线程上下文中。
+* 能够扩展Runnable的字节码，在Runnable初始化时将线程上下文信息存储到Runnable的成员变量，run()方法添加before环绕，在before逻辑中，将成员变量的信息保存到线程上下文中。
 * 因为Runnable构造方法的调用是在父线程中，run()方法是在子线程中调用，这样处理，可以利用runnable来实现上下文信息的传递。
 * 使用runnable扩展方案，无论是主动创建线程还是使用线程池，都可以决绝上下文信息传递的问题（线程池场景下需同时扩展callable）
 
