--- a/_posts/post/2019-08-02-transfer.md
+++ b/_posts/post/2019-08-02-transfer.md
@@ -29,9 +29,9 @@ comments: true
 
 ## 具体实现
 
-需要对Runnable字节码层面进行扩展，一般有两种编织手段，编译时编织和运行时编织，我们平常经常使用的比较多的Spring AOP就是运行时编织，但这存在一种限制，Bean的实例化需要交由容器来实现，主动创建出来的无法进行字节码扩展。
+需要对Runnable字节码层面进行扩展，一般有两种编织手段，编译时编织和运行时编织，我们平常经常使用的比较多的Spring AOP就是运行时编织，但这存在一种限制，Bean的实例化需要交由容器来实现，主动创建出来的实例无法进行字节码扩展。
 
-因为Runnable绝大多数的使用方式都是直接创建匿名内部类，所以编织方式不适合运行时编织，而是采用编译时编织，使用AspectJ对其进行代理，AJC进行编译。
+因为Runnable绝大多数的使用方式都是直接创建匿名内部类，所以编织方式不适合运行时编织，采用编译时编织，使用AspectJ对其进行代理，AJC进行编译。
 
 以下是我通过AspectJ对Runnable和Callable字节码扩展的实现：
 ``` java
