--- a/_posts/yan/2019-08-14-yanyan138.md
+++ b/_posts/yan/2019-08-14-yanyan138.md
@@ -12,7 +12,7 @@ video: true
 为了部落！！！
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
-    <source src="{{ site.staticUrl }}/yanyan/video/chuanmamadetuoxie.mp4" type='audio/mp3'>
+    <source src="{{ site.staticUrl }}/yanyan/video/813.mp3" type='audio/mp3'>
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
       <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
