--- a/_posts/yan/2019-09-02-yanyan142.md
+++ b/_posts/yan/2019-09-02-yanyan142.md
@@ -8,13 +8,13 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-上周末我们去省博物馆了。
+周末我们去省博物馆了。
 {: .notice}
 九点出头就出发了，路上一切顺利，很快就到了省博物馆，进博物馆遇到点小麻烦，我们带的水果有点多，不能带进去，需要寄存。
 {: .notice}
-抱着妍妍一路参观，最后居然趴在奶奶肩膀上睡着了，这么好的丰富知识的机会居然睡觉，长大以后可不能这样了。
-{: .notice}
 有一位奶奶，或许是看妍妍可爱，还分了橘子给妍妍吃，妍妍有点害羞，也没说谢谢，下次可不能这样了。
 {: .notice}
-博物馆还是很宏伟，藏品也很多，特别是青铜器特别精致，妍妍中间睡着了真是可惜了。
+抱着妍妍一路参观，最后居然趴在肩膀上睡着了，这么好的丰富知识的机会居然睡觉，长大以后可不能这样了。
+{: .notice}
+博物馆藏品很多，特别是青铜器特别精致，妍妍中间睡着了真是可惜了。
 {: .notice}
