--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -50,27 +50,16 @@ comments: false
 
 ## 项目
 
-### 系统全链路数据采集串联
-* 记录一个完整的请求在经过多个系统间的链路调用情况
-    * 对于独立的一个请求，维护了traceId的生成和系统间传递逻辑
-    * 基于log4j Layout，实现自定义日志通配符并自动记录串联信息
-    * 基于logstash的日志采集和elasticsearch的日志存储
-    * 数据的模版化查询
-
-### 费用表分表操作
-* 原始费用数据已进行分表，但分表算法不利于数据节点的扩展
-    * 通过直接哈希 + 65536个虚拟节点，用以确定分表算法，虚拟节点可修改与实体表映射关系来维护数据节点的增删
-    * 数据迁移，增量数据通过触发器复制到新的散列表中，存量数据使用存储过程方式进行。
-        
-### Lwm2m物联网协议服务端实现
-* Lwm2m是OMA（Open Mobile Alliance）指定的物联网规范，依据通用协议，实现相应的服务端程序
-    * 客户端的注册，信息更新，注销以及认证
-    * 客户端可操作传感器维护以及指令的发送
+### Lwm2m物联网规范服务端实现
+* Lwm2m是OMA（Open Mobile Alliance）指定的物联网规范，依据通用协议，实现相应的服务端程序。Lwm2m底层基于Coap协议支持，提供平台化的对物联网硬件的管理能力。
+    * 接受请求类型：客户端的注册，信息更新，注销
+    * 发送请求类型：对客户端对象单个实例进行响应的读，写，执行等操作。
     
-### star-map - 个人项目
-* __项目地址：[https://github.com/justice-code/star-map](https://github.com/justice-code/star-map)__
-    * 参考dubbo实现的分布式任务分发系统
-    * 使用zookeeper作为注册中心
-    * 使用netty4实现通信协议
-    * 利用securityManager实现脚本沙箱环境
-    * [更多介绍请点击查看](https://justice-love.com/star-map/)
+### 监控服务平台
+* 管理并开发内部监控平台服务，服务基于skywalking 6.2版本进行开发，主要是对其trace功能进行扩展并优化。
+    * 利用java agent方式对trace endpoint进行class扩展，感知调用并发送segment
+    
+### Seata
+* seata项目是阿里开源的分布式事务服务，基于改进过的二阶段提交原理进行服务，回滚策略使用日志回放的方式进行。
+    * 主要负责seata的事务传播模块编写，如grpc，跨线程传播。
+    * 对seata的反压给出方案并进一步实现。
