--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -50,6 +50,13 @@ comments: false
 
 ## 项目
 
+### 系统全链路数据采集串联
+* 记录一个完整的请求在经过多个系统间的链路调用情况
+    * 对于独立的一个请求，维护了traceId的生成和系统间传递逻辑
+    * 基于log4j Layout，实现自定义日志通配符并自动记录串联信息
+    * 基于logstash的日志采集和elasticsearch的日志存储
+    * 数据的模版化查询
+    
 ### Lwm2m物联网规范服务端实现
 * Lwm2m是OMA（Open Mobile Alliance）指定的物联网规范，依据通用协议，实现相应的服务端程序。Lwm2m底层基于Coap协议支持，提供平台化的对物联网硬件的管理能力。
     * 接受请求类型：客户端的注册，信息更新，注销
