--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -58,7 +58,7 @@ comments: false
     * 数据的模版化查询
     
 ### Lwm2m物联网规范服务端实现
-* Lwm2m是OMA（Open Mobile Alliance）指定的物联网规范，依据通用协议，实现相应的服务端程序。Lwm2m底层基于Coap协议支持，提供平台化的对物联网硬件的管理能力。
+* Lwm2m是OMA（Open Mobile Alliance）制定的物联网规范，依据通用协议，实现相应的服务端程序。Lwm2m底层基于Coap协议支持，提供平台化的对物联网硬件的管理能力。
     * 接受请求类型：客户端的注册，信息更新，注销
     * 发送请求类型：对客户端对象单个实例进行响应的读，写，执行等操作。
     
