--- a/_posts/yan/2019-09-04-yanyan144.md
+++ b/_posts/yan/2019-09-04-yanyan144.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-最近特别喜欢玩贴纸
+最近特别喜欢玩贴纸，视频里妍妍说的意思是，贴这么多
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/wanyouxitietiezhi.mp4" type='video/mp4'>
