--- a/_posts/yan/2019-09-27-yanyan146.md
+++ b/_posts/yan/2019-09-27-yanyan146.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-妈妈偷拍的一张妍妍和小朋友在楼下玩的照片，就是妍妍被挡住了半边身子，要仔细看才能找到。
+妈妈偷拍的一张妍妍和小朋友在楼下玩的照片，被奶奶挡住了半边身子，要仔细看才能找到。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/hexiaopengyouwan.jpeg?imageMogr2/auto-orient" />
