--- a/_posts/yan/2019-09-30-yanyan147.md
+++ b/_posts/yan/2019-09-30-yanyan147.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-听奶奶唱了几遍，也学着有模有样的唱着了。我和我的祖国，献礼祖国70周年。
+听奶奶唱了几遍，也唱的有模有样了。我和我的祖国，献礼祖国70周年。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/changhongge.mp4" type='video/mp4'>
