--- a/_posts/yan/2019-10-09-yanyan148.md
+++ b/_posts/yan/2019-10-09-yanyan148.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-国庆节去月亮岛玩，好多小朋友，到处跑。
+国庆节去月亮岛玩，有个挺大的游乐场，好多小朋友，到处跑，玩的挺开心。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/yueliangdaoyw1.jpg?imageMogr2/auto-orient" />
