--- a/_posts/yan/2019-10-22-yanyan150.md
+++ b/_posts/yan/2019-10-22-yanyan150.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-逛国金中心，靠在妈妈背上睡着了。
+逛国金中心，靠在妈妈肩膀上睡着了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/gscszl.jpg?imageMogr2/auto-orient" />
