--- a/_posts/yan/2019-11-06-yanyan152.md
+++ b/_posts/yan/2019-11-06-yanyan152.md
@@ -8,5 +8,5 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-徐晓妍最近又发烧了，周日周一烧了两天，没精神，一直睡过来的，但总是醒，一醒来就哭不舒服要抱，晚上你妈也陪着你没睡好，半个小时就要醒来看一次，往后睡觉不要踢被子了❤️
+徐晓妍最近又发烧了，周日周一烧了两天，没精神，一直睡过来的，但总是醒，一醒来就哭不舒服要抱，晚上你妈也陪着你没睡好，半个小时就醒来要抱，生病这么难受，往后睡觉不要踢被子了❤️
 {: .notice}
