--- a/_posts/yan/2019-11-14-yanyan153.md
+++ b/_posts/yan/2019-11-14-yanyan153.md
@@ -10,6 +10,8 @@ comments: true
 ---
 是在找什么呢❤️
 {: .notice}
+妍妍说在找石头
+{: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/zhaoxun.jpg?imageMogr2/auto-orient" />
 </figure>
