--- a/_posts/post/2019-11-26-timer.md
+++ b/_posts/post/2019-11-26-timer.md
@@ -10,3 +10,22 @@ tag:
 comments: true
 ---
 
+## 定义
+
+``` go
+func Every(t time.Duration, f func()) *time.Ticker {
+	ticker := time.NewTicker(t)
+
+	go func() {
+		for {
+			select {
+			case <-ticker.C:
+				f()
+			}
+		}
+	}()
+
+	return ticker
+}
+
+```
