--- a/_posts/post/2019-11-26-timer.md
+++ b/_posts/post/2019-11-26-timer.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "go定时器"
+title:  "Go定时器"
 date:   2019-11-26
 excerpt: "定时器解读"
 feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
@@ -29,7 +29,7 @@ func Every(t time.Duration, f func()) *time.Ticker {
 }
 
 ```
-上述代码为go计时器的基础定义方式，略了解go则可以看出，通过从chan（ticker.C）中获取数据来触发func的调用来触发定时器，所以，关键问题是何时向chan中写入数据。
+上述代码为go计时器的基础定义方式，略了解go则可以看出，通过从chan（ticker.C）中获取数据来触发func的调用来触发定时器，所以，关键问题是何时向chan中写入数据，至于周期时间如何计算并等待和唤醒暂不讨论。
 
 ## 解析
 
@@ -62,3 +62,18 @@ type Ticker struct {
 }
 
 ```
+可以看到，Ticker.C被定义成单向只读，使用者仅能够读取该chan用以触发计时器，但实际上chan被初始化（buffer为1是为了写入数据不被阻塞）为双向的，而实际向chan写入数据则在sendTime函数中完成。
+``` go
+func sendTime(c interface{}, seq uintptr) {
+	// Non-blocking send of time on c.
+	// Used in NewTimer, it cannot block anyway (buffer).
+	// Used in NewTicker, dropping sends on the floor is
+	// the desired behavior when the reader gets behind,
+	// because the sends are periodic.
+	select {
+	case c.(chan Time) <- Now():
+	default:
+	}
+}
+```
+至此，计时器大致的流程能够有一个轮廓了，而关于计时器周期性的等待和唤醒像上文所说的，今天暂且不表，后期在陆续给出。
