--- a/_posts/post/2019-12-09-car.md
+++ b/_posts/post/2019-12-09-car.md
@@ -10,7 +10,7 @@ tag:
 comments: true
 video: true
 ---
-基于[gobot](https://github.com/hybridgroup/gobot)对树莓派和GPIO的操控实现的自动避障小车。集成了电机控制模块以及声波测距模块。下方是成品拍摄的视频。
+基于[gobot](https://github.com/hybridgroup/gobot)对树莓派和GPIO的操控实现的自动避障小车。集成了电机控制模块以及声波测距模块。下方是成品拍摄的视频。已经购买了摄像头，后续会更新成通过手机观看小车视角并控制。
 {: .notice}
 代码地址：[Justice-love/pi](https://github.com/Justice-love/pi)
 {: .notice}
