--- a/_posts/life/2019-12-19-yuci.md
+++ b/_posts/life/2019-12-19-yuci.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
 life: true
 comments: true
 ---
-中午吃鱼被鱼刺卡住了，卡了两个小时不舒服，自己用手捏出来，眼泪口水流个不停。
+中午吃鱼被鱼刺卡住了，卡了两个小时不舒服，自己用手捏出来，眼泪口水流个不停。给捏出来的鱼刺来了个近照。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/image/jpg/yuci.jpg?imageMogr2/auto-orient" />
