--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -24,6 +24,14 @@ comments: false
 * 积极参与开源项目的贡献，比如Apache dubbo，alibaba seata（分布式事务服务）等。
 * 可以通过我的博客来了解我（[http://justice-love.com/](http://justice-love.com/)）。
 
+## 个人技能
+* java基础，多线程
+* java框架，spring，mybatis，dubbo，seata
+* jvm，java内存模型，类加载
+* 网络通信，TCP协议
+* mysql，redis，elasticsearch，不算精通
+* golang有接触
+
 ## 工作经历
 
 ### 2011.09-2014.11 / 湖南步步高集团 开发工程师
@@ -62,9 +70,11 @@ comments: false
     * 接受请求类型：客户端的注册，信息更新，注销
     * 发送请求类型：对客户端对象单个实例进行响应的读，写，执行等操作。
     
-### 监控服务平台
-* 管理并开发内部监控平台服务，服务基于skywalking 6.2版本进行开发，主要是对其trace功能进行扩展并优化。
-    * 利用java agent方式对trace endpoint进行class扩展，感知调用并发送segment
+### lorawan无线电协议管理控制平台
+* 基于[ChirpStack](https://www.chirpstack.io/)，使用golang二次开发的lorawan协议服务控制平台，整个服务分成三部分，gateway bridge，network server， application server。
+    * gateway bridge: 接收gateway设备收到的无线电并转发的网络信号
+    * network server: lorawan协议核心处理模块，指令控制，下行数据转发
+    * application server: 用户管理控制平台，允许录入设备并与network server通信
     
 ### Seata
 * seata项目是阿里开源的分布式事务服务，基于改进过的二阶段提交原理进行服务，回滚策略使用日志回放的方式进行。
