--- a/_posts/yan/2020-03-27-yanyan159.md
+++ b/_posts/yan/2020-03-27-yanyan159.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-徐晓妍最新的睡觉姿势，撅着屁股睡，也睡着了。
+徐晓妍最新的睡觉姿势，撅着屁股睡，也还真睡着了。
 {: .notice}
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/shuijiaozishi.mp4" type='video/mp4'>
