--- a/_posts/yan/2020-05-11-yanyan164.md
+++ b/_posts/yan/2020-05-11-yanyan164.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-周日去乔口渔都游玩，在乔江边上走还挺舒服的。
+周日去乔口渔都游玩，在乔江边上走还挺舒服的。边走边吃也挺舒坦的😁
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/qiaokouyuduyw3.jpeg?imageMogr2/auto-orient" />
