--- a/_posts/life/2020-05-12-hushijie.md
+++ b/_posts/life/2020-05-12-hushijie.md
@@ -8,7 +8,9 @@ feature: https://static.justice-love.com/image/jpg/bjfj1.jpg
 life: true
 comments: true
 ---
-今天是护士节，老婆护士节快乐。今天也是你的新征程，从2014年的浙江省儿保，到湖南省人医的新生儿科，是一个传承，一个延续，不容易，老婆，给你加油。
+今天是护士节，老婆节快乐。
+{: .notice}
+这是你的新征程，从2014年的浙江省儿保，到现在的湖南省人医的新生儿科，是一个传承，一个延续，不容易，老婆，给你加油了。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/image/jpeg/hushijieshoumao0.jpeg?imageMogr2/auto-orient" />
