--- a/_posts/yan/2020-06-02-yanyan166.md
+++ b/_posts/yan/2020-06-02-yanyan166.md
@@ -8,6 +8,6 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-昨晚一个人在房间看书，我走过去坐旁边，就说爸爸别打扰我看书，然后就抱着书和小白兔要去其他房间，还问我，爸爸，我的鞋子在哪里。😄
+昨晚妍妍一个人在房间看书，我走过去坐旁边，就说爸爸别打扰我看书，然后就抱着书和小白兔要去其他房间，还问我，爸爸，我的鞋子在哪里。😄
 {: .notice}
 
