--- a/_posts/yan/2020-06-08-yanyan169.md
+++ b/_posts/yan/2020-06-08-yanyan169.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-周日去室内动物园看小动物，下午还去了麦咭运动，可惜没拍照片，在回去的路上妍妍还和妈妈说，今天好累
+周日去了甜甜湾室内动物城看小动物，下午还去了旁边的麦咭运动，光顾着爬来爬去就没拍照片，在回去的路上妍妍还和妈妈说，今天好累
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/shineidongwuyuanwan.jpeg?imageMogr2/auto-orient" />
