--- a/_posts/yan/2020-07-05-yanyan172.md
+++ b/_posts/yan/2020-07-05-yanyan172.md
@@ -8,7 +8,7 @@ feature: https://static.justice-love.com/image/jpg/xktp.jpg?imageView2/1/w/1200/
 yan: true
 comments: true
 ---
-晚上关了灯，徐晓妍自己拿着枕头，抱着小白兔要睡到爸爸妈妈中间来，还转过来摸着爸爸的脸，说这是头发，这是眼睛，这是胡子，好可爱。
+晚上关了灯后，徐晓妍就自己拿着枕头，抱着小白兔要睡到爸爸妈妈中间来，放好枕头，还要两边扭两下，然后就转过来摸着爸爸的脸说，这是头发，这是眼睛，这是胡子，好可爱。
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/mangshanyouwan5.jpeg?imageMogr2/auto-orient" />
