--- a/_posts/yan/2020-09-08-yanyan179.md
+++ b/_posts/yan/2020-09-08-yanyan179.md
@@ -11,6 +11,6 @@ comments: true
 全家一起到华谊电影小镇玩
 {: .notice}
 <figure>
-    <img src="{{ site.staticUrl }}/yanyan/image/huayidianyingxiaozhen0.jpeg?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/huayidianyingxiaozhen1.jpeg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/huayidianyingxiaozhen0.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/huayidianyingxiaozhen1.jpg?imageMogr2/auto-orient" />
 </figure>
