--- a/_posts/yan/2020-10-13-yanyan181.md
+++ b/_posts/yan/2020-10-13-yanyan181.md
@@ -13,6 +13,7 @@ video: true
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri.jpg?imageMogr2/auto-orient" />
+    <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri1.jpg?imageMogr2/auto-orient" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/qitaxiaopengyouguoshengri.mp4" type='video/mp4'>
