--- a/_posts/yan/2020-10-13-yanyan181.md
+++ b/_posts/yan/2020-10-13-yanyan181.md
@@ -9,11 +9,10 @@ yan: true
 comments: true
 video: true
 ---
-徐晓妍的好朋友过生日，左边第三个是徐晓妍小朋友，左边第二个是过生日的小朋友萌崽
+徐晓妍的好朋友过生日，左边第三个是徐晓妍❤️小朋友，左边第二个是过生日的小朋友萌崽
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri.jpg?imageMogr2/auto-orient" />
-    <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri1.jpg?imageMogr2/auto-orient" />
 </figure>
 <video id="my-video" class="video-js vjs-16-9 clipboard" controls preload="auto" width="722" height="264" data-setup="{}">
     <source src="{{ site.staticUrl }}/yanyan/video/qitaxiaopengyouguoshengri.mp4" type='video/mp4'>
