--- a/_posts/yan/2020-10-13-yanyan181.md
+++ b/_posts/yan/2020-10-13-yanyan181.md
@@ -9,7 +9,7 @@ yan: true
 comments: true
 video: true
 ---
-徐晓妍的好朋友过生日，左边第三个是徐晓妍❤️小朋友，左边第二个是过生日的小朋友萌崽
+徐晓妍的好朋友过生日，徐晓妍❤️小朋友是左边第三个哦，左边第二个是过生日的小朋友萌崽
 {: .notice}
 <figure>
     <img src="{{ site.staticUrl }}/yanyan/image/qitaxiaopengyouguoshengri.jpg?imageMogr2/auto-orient" />
