--- a/_posts/yan/2020-11-10-yanyan183.md
+++ b/_posts/yan/2020-11-10-yanyan183.md
@@ -10,9 +10,9 @@ comments: true
 ---
 2020年10月25号，徐晓妍满三岁了，一转眼妍妍也从一个小宝宝长成了一个小区里可以带着一群小屁股疯跑的大姐姐了。
 {: .notice}
-三岁的徐晓妍越来越可爱了，但昨天也在和肖霄说，三岁的徐晓妍也越来越娇了，还很胆小，还很怕生，爸爸妈妈其实希望徐晓妍你成为一个勇敢的女孩子。
+三岁的徐晓妍，你越来越可爱了，但昨天也在和妈妈说，你也越来越娇了，还很胆小，还很怕生，爸爸妈妈其实希望徐晓妍你成为一个勇敢的女孩子。
 {: .notice}
-原来是说，三岁的徐晓妍，要和爸爸一起锻炼，做运动，所以，爸爸会时不时的早上把你和妈妈从床上拉起来的。
+三岁的徐晓妍，要和爸爸一起锻炼，做运动，所以，爸爸会时不时的早上把你和妈妈从床上拉起来的。
 {: .notice}
 三岁的徐晓妍，也到了要上幼儿园的年级了，也不知道你上幼儿园会不会想爸爸妈妈，会不会哭，我想肯定会哭，会哭的稀里哗啦的，但是你是大姐姐了，要上学了哦。
 {: .notice}
