--- a/_posts/yan/2020-11-10-yanyan183.md
+++ b/_posts/yan/2020-11-10-yanyan183.md
@@ -16,5 +16,5 @@ comments: true
 {: .notice}
 三岁的徐晓妍，也到了要上幼儿园的年级了，也不知道你上幼儿园会不会想爸爸妈妈，会不会哭，我想肯定会哭，会哭的稀里哗啦的，但是你是大姐姐了，要上学了哦。
 {: .notice}
-三岁的徐晓妍，爸爸妈妈是爱你的，生日快乐哦，还有四岁，五岁，六岁，一直到永远的徐晓妍。
+三岁的徐晓妍，爸爸妈妈是爱你的，生日快乐哦，还有四岁，五岁，六岁，还有今后所有的徐晓妍。
 {: .notice}
