--- a/_posts/post/2020-11-10-git-flow.md
+++ b/_posts/post/2020-11-10-git-flow.md
@@ -15,3 +15,13 @@ comments: true
 
 ## git flow
 
+### 简介
+
+典型的git flow拥有三个主分支develop，test，master，一般对应着开发流程中的三个环境，开发，测试，正式。而像flow这个单词所所描述的那样，代码是在不同的节点流向另一个分支。
+
+### 好的点
+
+现在大多数的开发团队都是首选git flow作业团队协作模型，其主要原因也是git flow的三个分支能够很好的对应到业务开发流程中的三个环境开发，测试，正式，而遵循git flow的规范，即代码只能从一个方向往下流，即develop -> test -> master，这样是为了保证git commit 数据流的规整，当然如果需要hotfix，git flow的规范也有包含，但是注意，同样需要准许代码只能往一个方向流动的规则，如果的确需要倒流，可以使用cherry-pick。
+
+### 欠缺的点
+
