--- a/_posts/post/2020-11-10-git-flow.md
+++ b/_posts/post/2020-11-10-git-flow.md
@@ -25,3 +25,26 @@ comments: true
 
 ### 欠缺的点
 
+git flow规范中对应的三个分支，是固定分支，而需求是不固定的，这就使得分支成为了被竞争的有限资源，比如同时存在两个进行中的需求，一个是大版本的需求，开发测试时间跨度都很大，一个是短期的优化需求，这样在使用test分支这个有限资源是，就存在竞争情况，这样就导致了无法直接使用test分支合并到master分支发布，而如何合并也会由于git的特性而导致新的问题。
+如果直接将feature分支合并到master，则不会引入一些问题，但这也导致了可能会将feature分支上未发布的代码带入到master。如果使用cherry-pick合并（是否rebase -i依据个人习惯），则会导致commit发生变更，这样就会导致如果后续再将test合并到master，由于test和master都存在相同的代码改动，但不属于同一个commit，会被git识别成冲突。
+
+## github flow
+
+### 简介
+
+其实github flow是相对于git flow来的，他只拥有一个主分支，并没有代码流动的概念。github flow的主要场景是对主分支master分支进行保护，所有对master分支的合并必须经过完整的PR流程
+
+### 好的点
+
+关键的好处就是简单，因为只有一个主分支，只需要对其进行保护和PR操作，没有git flow这么复杂的代码流动，hotfix处理，也就不会存在太过于复杂的git commit 数据流。
+
+### 欠缺的点
+
+欠缺的点也很明显，就是不好和日常开发流程很好的匹配，所以github flow一般是对开源项目的维护中使用，由项目的PMC来保证代码的质量。
+
+## 是否可以混用
+
+这两种协作方式都是单纯的技术点，没有明确的规定哪里该怎么使用，只有选择自己合适的方式。一般情况下，更多的是在git flow里混合github flow的PR来使用。
+个人是不建议这种使用方式的，因为PR的主旨很明显，是用来对主分支进行保护的，尤其是PR的squash功能在这点上特别明显，squash是用来合并提交merge，这里主要是保护主分支不使其有过多过散的git commit 数据流。
+而如果在git flow中使用了这种方式，就会导致主分支和另外两个分支，像test分支，拥有相同的代码改动，却属于两个不同的commit，这样会导致下次代码流动，会有过多的冲突，长久以往，几乎是无法完成一次代码流动。
+
