--- a/_posts/post/2020-11-10-git-flow.md
+++ b/_posts/post/2020-11-10-git-flow.md
@@ -27,6 +27,7 @@ comments: true
 
 git flow规范中对应的三个分支，是固定分支，而需求是不固定的，这就使得分支成为了被竞争的有限资源，比如同时存在两个进行中的需求，一个是大版本的需求，开发测试时间跨度都很大，一个是短期的优化需求，这样在使用test分支这个有限资源是，就存在竞争情况，这样就导致了无法直接使用test分支合并到master分支发布，而如何合并也会由于git的特性而导致新的问题。
 如果直接将feature分支合并到master，则不会引入一些问题，但这也导致了可能会将feature分支上未发布的代码带入到master。如果使用cherry-pick合并（是否rebase -i依据个人习惯），则会导致commit发生变更，这样就会导致如果后续再将test合并到master，由于test和master都存在相同的代码改动，但不属于同一个commit，会被git识别成冲突。
+所以，如果想很好的使用git flow，需要有一个固定的版本规划。
 
 ## github flow
 
@@ -47,4 +48,23 @@ git flow规范中对应的三个分支，是固定分支，而需求是不固定
 这两种协作方式都是单纯的技术点，没有明确的规定哪里该怎么使用，只有选择自己合适的方式。一般情况下，更多的是在git flow里混合github flow的PR来使用。
 个人是不建议这种使用方式的，因为PR的主旨很明显，是用来对主分支进行保护的，尤其是PR的squash功能在这点上特别明显，squash是用来合并提交merge，这里主要是保护主分支不使其有过多过散的git commit 数据流。
 而如果在git flow中使用了这种方式，就会导致主分支和另外两个分支，像test分支，拥有相同的代码改动，却属于两个不同的commit，这样会导致下次代码流动，会有过多的冲突，长久以往，几乎是无法完成一次代码流动。
+而git flow也和github flow大的不同是，git flow主要靠测试来保证代码的可靠性，而github flow要靠review来保证其主分支的可靠性。
 
+## 个人觉得好的协作方式
+
+比较推崇github flow的单一主分支的方式，这样对于代码的维护会简单很多，而具体开发过程中，git flow的三个分支能够很好的对应开发流程中的三个环境，但是其是固定分支，会引入竞争的情况，可以将这三个分支抽象为动态分支，即
+
+1. 环境是固定的，为开发，测试，正式
+2. 分支是动态的，为dev_{suffix}, test_{suffix}, master_{suffix}
+3. 不同环境的动态分支是可以随时创建(因为主分支只有master一个分支，所有的动态分支都是基于master创建，所以feature可以随意的合并到基于master创建的动态分支)
+    * 从master分支拉出对应的动态分支，如test_{suffix}
+    * 对应的feature分支合并到test_{suffix}即为当前的
+4. 如果一个分支临时需要进入测试，则只需将feature合并到test_{suffix}
+5. 如果版本规划固定，可以参考git flow的代码流动，直接将下游的动态分支上升到上有，如test_{suffix}上升为master_{suffix}，这样也保证了测试的延续性
+6. 如果存在单独的需求需要提前进入发布流程，则可以单独创建master动态分支
+    * 从master分支拉出对应的动态分支master_{suffix}
+    * 将feature合并到master_{suffix}
+    * 发布完成后，将master_{suffix}合并到master即可
+7. 因为只有一个主分支，所以hotfix也不存在git flow那样的复杂操作，按正常流程执行即可
+
+上述方案有一定的复杂度，如需要实现，对CI系统有一定的要求。
